# bitstream

./: bitstream.cabal
Data/Attoparsec/: Bitstream.hs
Data/Attoparsec/Bitstream/: Internal.hs
