Name: bitstream
Synopsis: Fast, packed, strict and lazy bit streams with stream fusion
Description:

        Fast, packed, strict and lazy bit vectors with stream
        fusion. This is like @bytestring@ but stores bits instead of
        bytes.

Version: 0.2.0.4
License: PublicDomain
License-File: COPYING
Author: PHO <pho at cielonegro dot org>
Maintainer: PHO <pho at cielonegro dot org>
Stability: experimental
Homepage: https://github.com/phonohawk/bitstream
Bug-Reports: https://github.com/phonohawk/bitstream/issues
Category: Data
Tested-With: GHC == 7.6.2
Cabal-Version: >= 1.10
Build-Type: Simple
Extra-Source-Files:
    AUTHORS
    COPYING
    ChangeLog

Source-Repository head
    Type: git
    Location: git://github.com/phonohawk/bitstream.git

Flag true-name
    Description: use true-name to access attoparsec and bytestring internals
    Default: False

Library
    Build-Depends:
        attoparsec           >= 0.12,
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        bytestring           >= 0.9 && < 0.11,
        vector               == 0.10.*
    if flag(true-name)
        Build-Depends: template-haskell >= 2.8, true-name >= 0.0.0.1
        CPP-Options: -DTRUE_NAME=1

    Exposed-Modules:
        Data.Attoparsec.Bitstream
        Data.Bitstream
        Data.Bitstream.Fusion
        Data.Bitstream.Fusion.Monadic
        Data.Bitstream.Generic
        Data.Bitstream.Lazy
        Data.Bitstream.Packet

    Other-Modules:
        Data.Attoparsec.Bitstream.Internal
        Data.Bitstream.Internal

    Default-Language:
         Haskell2010

    GHC-Options:
        -Wall

Test-Suite test-strict-bitstream
    Type:    exitcode-stdio-1.0
    Main-Is: Test/Bitstream.hs
    Other-Modules:
        Test.Bitstream.Utils
    Build-Depends:
        QuickCheck           >= 2.5,
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        bytestring           >= 0.9 && < 0.11,
        vector               == 0.10.*
    Default-Language: Haskell2010
    GHC-Options:
        -Wall -fno-warn-orphans

Test-Suite test-lazy-bitstream
    Type:    exitcode-stdio-1.0
    Main-Is: Test/Bitstream/Lazy.hs
    Other-Modules:
        Test.Bitstream.Utils
    Build-Depends:
        QuickCheck           >= 2.5,
        base                 == 4.*,
        base-unicode-symbols == 0.2.*,
        bytestring           >= 0.9 && < 0.11,
        vector               == 0.10.*
    Default-Language: Haskell2010
    GHC-Options:
        -Wall -fno-warn-orphans
